Add JokeService interface and some cosmetic changes

--- a/src/main/resources/templates/joke.html
+++ b/src/main/resources/templates/joke.html
@@ -6,10 +6,6 @@
 </head>
 <body>
 <h1>Chuck Norris is the best because:</h1>
-
-<table>
-  <td th:text="${jokes}">Spring in Action</td>
-</table>
-
+<p th:text="${jokes}">Show Joke here</p>
 </body>
 </html>
